feat: Display chemical symbol in the modal, adjusting its dimensions and styling.

--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
             <button id="close-modal" class="close-modal-btn">✕</button>
             <div class="card flipped static-card">
                 <div class="card-back">
+                    <div id="modal-symbol" class="modal-card-symbol"></div>
                     <h3 id="modal-main-answer">Odpověď</h3>
                     <div class="card-meta">
                         <p>Z: <span id="modal-atomic"></span></p>
