feat: Implement new modal UI/UX with click-to-close, updated styling, and set dark theme as default.

--- a/index.html
+++ b/index.html
@@ -145,7 +145,6 @@
     <!-- Card Detail Modal -->
     <div id="card-modal" class="modal hidden">
         <div class="modal-content">
-            <button id="close-modal" class="close-modal-btn">✕</button>
             <div class="card flipped static-card">
                 <div class="card-back">
                     <div id="modal-symbol" class="modal-card-symbol"></div>
@@ -158,6 +157,7 @@
                     </div>
                 </div>
             </div>
+            <div class="modal-hint">Zavřít kliknutím kamkoliv</div>
         </div>
     </div>
 
