feat: Implement infinity mode for continuous play, update progress display to show '∞', and prevent card text selection.

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
                     <div class="btn-group" id="batch-size-group">
                         <button class="batch-btn" data-value="12">12</button>
                         <button class="batch-btn" data-value="24">24</button>
-                        <button class="batch-btn" data-value="48">48</button>
                         <button class="batch-btn selected" data-value="all">Vše</button>
+                        <button class="batch-btn" data-value="infinity">∞</button>
                     </div>
                 </div>
 
